# csv-combiner-py

./: README.md  main.py  pyproject.toml  tests.py
.github/workflows/: python-package.yml
src/csv_combiner/: __init__.py  __main__.py
src/csv_combiner/util/: __init__.py  util.py
tests/: tests.py
