[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv_combiner"
version = "0.0.1"
authors = [
  { name="Dane Rieber", email="danerieber@gmail.com" },
]
description = "Combines rows from multiple CSV files into one CSV file, adding a column specifying the original file for each row"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danerieber/csv-combiner-py"
"Bug Tracker" = "https://github.com/danerieber/csv-combiner-py/issues"